sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Items__c/Vendor_Invoice_Items__c.object-meta.xml
<CustomObject>
    <label>Vendor Invoice Item</label>
    <nameField>
        <displayFormat>VII-{0000000}</displayFormat>
        <label>Vendor Invoice Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>