sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Items__c/fields/Accepted_Receive_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Receive_Quantity__c</fullName>
    <label>Accepted Receive Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>