sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Items__c/fields/Complete_Order__c.field-meta.xml
<CustomField>
    <fullName>Complete_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Complete order even though it is partially received</description>
    <inlineHelpText>Complete order even though it is partially received</inlineHelpText>
    <label>Complete Order</label>
    <type>Checkbox</type>
</CustomField>