sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Items__c/fields/Dimension_1__c.field-meta.xml
<CustomField>
    <fullName>Dimension_1__c</fullName>
    <formula>Purchase_Order_Line_Item__r.Purchase_Order_Item__r.Inventory_Item__r.Item_Group__r.Dimension_1__r.lookup_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dimension 1</label>
    <type>Text</type>
</CustomField>