sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Items__c/fields/Dimension_3__c.field-meta.xml
<CustomField>
    <fullName>Dimension_3__c</fullName>
    <formula>Purchase_Order_Line_Item__r.Purchase_Order_Item__r.Inventory_Item__r.Item_Group__r.Dimension_3__r.lookup_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dimension 3</label>
    <type>Text</type>
</CustomField>