sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Items__c/fields/Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item__c</fullName>
    <formula>Purchase_Order_Line_Item__r.Purchase_Order_Item__r.Inventory_Item__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Item</label>
    <type>Text</type>
</CustomField>