sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Items__c/fields/Inventory_UOM__c.field-meta.xml
<CustomField>
    <fullName>Inventory_UOM__c</fullName>
    <formula>Purchase_Order_Line_Item__r.Purchase_Order_Item__r.Inventory_Item__r.Inventory_UoM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory UOM</label>
    <type>Text</type>
</CustomField>