sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Items__c/fields/Invoice_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Assigned__c</fullName>
    <formula>Purchase_Order_Line_Item__r.Invoice_Assigned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Assigned</label>
    <type>Checkbox</type>
</CustomField>