sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Items__c/fields/Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Description__c</fullName>
    <formula>Purchase_Order_Line_Item__r.Item__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Description</label>
    <type>Text</type>
</CustomField>