sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Items__c/fields/Item_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Item_Unit_Price__c</fullName>
    <formula>Purchase_Order_Line_Item__r.Unit_Price__c</formula>
    <label>Item Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>