sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Items__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <description>Shows the payment status of the Vendor Invoice</description>
    <formula>Vendor_Invoice__r.Payment_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the payment status of the Vendor Invoice</inlineHelpText>
    <label>Payment Status</label>
    <type>Text</type>
</CustomField>