sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Items__c/fields/Pin_Created__c.field-meta.xml
<CustomField>
    <fullName>Pin_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pin Created</label>
    <type>Checkbox</type>
</CustomField>