sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Items__c/fields/PO_Credit_GLA__c.field-meta.xml
<CustomField>
    <fullName>PO_Credit_GLA__c</fullName>
    <formula>&quot;test text&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Credit GLA</label>
    <type>Text</type>
</CustomField>