sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Items__c/fields/PO_Currency__c.field-meta.xml
<CustomField>
    <fullName>PO_Currency__c</fullName>
    <formula>Purchase_Order_Line_Item__r.Purchase_Order__r.PO_Currency__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Currency</label>
    <type>Text</type>
</CustomField>