sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Items__c/fields/Purchase_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Line_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Purchase Order Line Item</label>
    <referenceTo>Purchase_Order_Line_Item__c</referenceTo>
    <relationshipLabel>Vendor Invoice Items</relationshipLabel>
    <relationshipName>Vendor_Invoice_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>