sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Items__c/fields/Purchase_UOM__c.field-meta.xml
<CustomField>
    <fullName>Purchase_UOM__c</fullName>
    <formula>Purchase_Order_Line_Item__r.Purchase_Order_Item__r.Purchase_UoM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase UOM</label>
    <type>Text</type>
</CustomField>