sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Items__c/fields/QHSE__c.field-meta.xml
<CustomField>
    <fullName>QHSE__c</fullName>
    <formula>IF( ISPICKVAL( Purchase_Order_Line_Item__r.PTS_Line_Item__r.RequestType__c , &#39;Stock&#39;) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QHSE?</label>
    <type>Checkbox</type>
</CustomField>