sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Items__c/fields/Receipt_Unit_Gross_Value__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Unit_Gross_Value__c</fullName>
    <label>Receipt Unit Gross Value</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>