sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Items__c/fields/Receipt_Unit_Net_Value__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Unit_Net_Value__c</fullName>
    <label>Receipt Unit Net Value</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>