sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Items__c/fields/Receive_Batch__c.field-meta.xml
<CustomField>
    <fullName>Receive_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receive Lot</label>
    <referenceTo>Item_Location_Lot__c</referenceTo>
    <relationshipLabel>Vendor Invoice Items</relationshipLabel>
    <relationshipName>Vendor_Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>