sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Items__c/fields/Receive_Location__c.field-meta.xml
<CustomField>
    <fullName>Receive_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receive Location</label>
    <referenceTo>Inventory_Location__c</referenceTo>
    <relationshipLabel>Vendor Invoice Items</relationshipLabel>
    <relationshipName>Vendor_Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>