sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Items__c/fields/Receive_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Receive_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Receive Quantity</label>
    <precision>13</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>