sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Items__c/fields/Received_Value__c.field-meta.xml
<CustomField>
    <fullName>Received_Value__c</fullName>
    <formula>Receive_Quantity__c * Receipt_Unit_Gross_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Received Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>