sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Items__c/fields/Rejected_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Quantity__c</fullName>
    <label>Rejected Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>