sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Items__c/fields/Requires_Batch__c.field-meta.xml
<CustomField>
    <fullName>Requires_Batch__c</fullName>
    <formula>Purchase_Order_Line_Item__r.Purchase_Order_Item__r.Inventory_Item__r.Batch_Item__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requires Batch</label>
    <type>Checkbox</type>
</CustomField>