sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Items__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending GIGO Check</fullName>
                <default>true</default>
                <label>Pending GIGO Check</label>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>GIGO Checked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>