sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Items__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <label>Pending Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>