sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Items__c/fields/Total_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Received__c</fullName>
    <formula>Purchase_Order_Line_Item__r.Quantity_Accepted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>