sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Items__c/fields/Vendor_Invoice_Purchase_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Invoice_Purchase_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Invoice Purchase Order Line Item</label>
    <referenceTo>Vendor_Invoice_Purchase_Order_Line_Item__c</referenceTo>
    <relationshipLabel>Vendor Invoice Items</relationshipLabel>
    <relationshipName>Vendor_Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>