sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Items__c/validationRules/VILineAndPOLineItemCompanyValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>VILineAndPOLineItemCompanyValidation</fullName>
    <active>true</active>
    <errorConditionFormula>Company__c  &lt;&gt;  Purchase_Order_Line_Item__r.Requesting_Company__c</errorConditionFormula>
    <errorMessage>The company on this VI Item does not match the company on the related PO Line Item.</errorMessage>
</ValidationRule>